--- a/src/NetCoreSampleApp/Properties/launchSettings.json
+++ b/src/NetCoreSampleApp/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:55811/",
+      "applicationUrl": "http://localhost:63489/",
       "sslPort": 0
     }
   },
@@ -16,14 +16,14 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "GeoLocation": {
+    "NetCoreSampleApp": {
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "api/values",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "http://localhost:55812"
+      "applicationUrl": "http://localhost:63490"
     }
   }
 }
